--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<modules>
 		<module>spring-cloud-starter-stream-source-tcp</module>
 		<module>spring-cloud-starter-stream-sink-tcp</module>
+		<module>spring-cloud-starter-stream-source-tcp-client</module>
+		<module>spring-cloud-starter-stream-processor-tcp-client</module>
 		<module>tcp-app-dependencies</module>
 		<module>tcp-app-starters-test-support</module>
 		<module>tcp-app-starters-common</module>
