--- a/tcp-app-dependencies/pom.xml
+++ b/tcp-app-dependencies/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tcp-app-dependencies</artifactId>
-    <version>1.1.0.RC1</version>
+    <version>1.1.0.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>tcp-app-dependencies</name>
     <description>Spring Cloud Stream TCP App Dependencies</description>
@@ -18,27 +18,27 @@
             <dependency>
                 <groupId>org.springframework.cloud.stream.app</groupId>
                 <artifactId>spring-cloud-starter-stream-source-tcp</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0.BUILD-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud.stream.app</groupId>
                 <artifactId>spring-cloud-starter-stream-sink-tcp</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0.BUILD-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud.stream.app</groupId>
                 <artifactId>spring-cloud-starter-stream-source-tcp-client</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0.BUILD-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud.stream.app</groupId>
                 <artifactId>spring-cloud-starter-stream-processor-tcp-client</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0.BUILD-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud.stream.app</groupId>
                 <artifactId>tcp-app-starters-test-support</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0.BUILD-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.integration</groupId>
