--- a/spring-cloud-starter-stream-source-tcp-client/pom.xml
+++ b/spring-cloud-starter-stream-source-tcp-client/pom.xml
@@ -10,14 +10,14 @@
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
 		<artifactId>tcp-app-starters-build</artifactId>
-		<version>1.1.2.BUILD-SNAPSHOT</version>
+		<version>1.1.2.M1</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud.stream.app</groupId>
 			<artifactId>tcp-app-starters-common</artifactId>
-			<version>1.1.2.BUILD-SNAPSHOT</version>
+			<version>1.1.2.M1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud.stream.app</groupId>
