--- a/spring-cloud-starter-stream-source-tcp-client/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
+++ b/spring-cloud-starter-stream-source-tcp-client/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
@@ -1,2 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.stream.app.tcp.client.source.TcpClientSourceProperties
+configuration-properties.classes=org.springframework.cloud.stream.app.tcp.client.source.TcpClientSourceProperties,org.springframework.cloud.stream.app.tcp.TcpConnectionFactoryProperties
 
