--- a/spring-cloud-starter-stream-sink-tcp/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
+++ b/spring-cloud-starter-stream-sink-tcp/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
@@ -1,1 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.stream.app.tcp.sink.TcpSinkProperties,org.springframework.cloud.stream.app.tcp.TcpConnectionFactoryProperties
+configuration-properties.classes=org.springframework.cloud.stream.app.tcp.sink.TcpSinkProperties,\
+  org.springframework.cloud.stream.app.tcp.TcpConnectionFactoryProperties
