Update TCP to SpringBoot/SpringCloud 2.0.x
 - set default output content-type in post-processors
 - replace config. properties inheritance by composition
 - Resolves missing documentation generation

Resolves spring-cloud-stream-app-starters/tcp#4
Resolves spring-cloud-stream-app-starters/tcp#5
Resolves spring-cloud-stream-app-starters/tcp#6
Resolves spring-cloud-stream-app-starters/tcp#7
Resolves spring-cloud-stream-app-starters/tcp#8

--- a/spring-cloud-starter-stream-source-tcp/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
+++ b/spring-cloud-starter-stream-source-tcp/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
@@ -1,2 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.stream.app.tcp.source.TcpSourceProperties
-
+configuration-properties.classes=org.springframework.cloud.stream.app.tcp.source.TcpSourceProperties,\
+  org.springframework.cloud.stream.app.tcp.TcpConnectionFactoryProperties
