--- a/spring-cloud-starter-stream-processor-tcp-client/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
+++ b/spring-cloud-starter-stream-processor-tcp-client/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
@@ -1,2 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.stream.app.tcp.client.processor.TcpClientProcessorProperties
-
+configuration-properties.classes=org.springframework.cloud.stream.app.tcp.client.processor.TcpClientProcessorProperties,\
+  org.springframework.cloud.stream.app.tcp.TcpConnectionFactoryProperties
