--- a/tcp-app-dependencies/pom.xml
+++ b/tcp-app-dependencies/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.springframework.cloud.stream.app</groupId>
 	<artifactId>tcp-app-dependencies</artifactId>
-	<version>2.1.0.BUILD-SNAPSHOT</version>
+	<version>2.1.0.M1</version>
 	<packaging>pom</packaging>
 	<name>tcp-app-dependencies</name>
 	<description>Spring Cloud Stream TCP App Dependencies</description>
@@ -11,7 +11,7 @@
 	<parent>
 		<artifactId>spring-cloud-dependencies-parent</artifactId>
 		<groupId>org.springframework.cloud</groupId>
-		<version>2.1.0.BUILD-SNAPSHOT</version>
+		<version>2.1.0.RC3</version>
 		<relativePath />
 	</parent>
 
@@ -20,27 +20,27 @@
 			<dependency>
 				<groupId>org.springframework.cloud.stream.app</groupId>
 				<artifactId>spring-cloud-starter-stream-source-tcp</artifactId>
-				<version>2.1.0.BUILD-SNAPSHOT</version>
+				<version>2.1.0.M1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud.stream.app</groupId>
 				<artifactId>spring-cloud-starter-stream-sink-tcp</artifactId>
-				<version>2.1.0.BUILD-SNAPSHOT</version>
+				<version>2.1.0.M1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud.stream.app</groupId>
 				<artifactId>spring-cloud-starter-stream-source-tcp-client</artifactId>
-				<version>2.1.0.BUILD-SNAPSHOT</version>
+				<version>2.1.0.M1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud.stream.app</groupId>
 				<artifactId>spring-cloud-starter-stream-processor-tcp-client</artifactId>
-				<version>2.1.0.BUILD-SNAPSHOT</version>
+				<version>2.1.0.M1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud.stream.app</groupId>
 				<artifactId>tcp-app-starters-test-support</artifactId>
-				<version>2.1.0.BUILD-SNAPSHOT</version>
+				<version>2.1.0.M1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
