--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
 		<artifactId>app-starters-build</artifactId>
-		<version>2.1.6.RELEASE</version>
+		<version>2.1.7.BUILD-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
 
@@ -27,7 +27,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud.stream.app</groupId>
 				<artifactId>tcp-app-dependencies</artifactId>
-				<version>2.1.4.RELEASE</version>
+				<version>2.1.5.BUILD-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
